support intraprecedual contant propogation

--- a/options.yml
+++ b/options.yml
@@ -1,7 +1,6 @@
 optionsFile: null
 printHelp: false
-inputFiles:
-  - src/test/resources/toyc/oj/16_complex_syntax.tc
+inputFile: src/test/resources/toyc/ir/FunctionCall.tc
 worldBuilderClass: toyc.frontend.ToyCWorldBuilder
 outputDir: output
 preBuildIR: false
@@ -9,7 +8,8 @@ worldCacheMode: false
 scope: REACHABLE
 planFile: null
 analyses:
-  icfg: ""
+  const-prop: ""
+  process-result: ""
 onlyGenPlan: false
 keepResult:
   - $KEEP-ALL
