support short circuit in ir generation

--- a/options.yml
+++ b/options.yml
@@ -1,15 +1,15 @@
 optionsFile: null
 printHelp: false
-inputFile: src/test/resources/toyc/ir/FunctionCall.tc
+inputFile: src/test/resources/toyc/oj/03_if_else.tc
 worldBuilderClass: toyc.frontend.ToyCWorldBuilder
 outputDir: output
 preBuildIR: false
 worldCacheMode: false
 scope: REACHABLE
 planFile: null
-analyses:
-  inter-const-prop: ""
-  process-result: ""
 onlyGenPlan: false
+analyses:
+  const-prop: ""
+  process-result: ""
 keepResult:
   - $KEEP-ALL
