fix basic issue

--- a/src/main/resources/toyc-analyses.yml
+++ b/src/main/resources/toyc-analyses.yml
@@ -73,8 +73,8 @@
     log-mismatches: false
 
 - description: common subexpression elimination
-  analysisClass: toyc.analysis.cse.CommonSubexpressionElimination
-  id: cse
+  analysisClass: toyc.analysis.dataflow.analysis.cse.CommonSubexpressionElimination
+  id: common-subexp-eliminate
   requires: [ cfg,const-prop ]
   options:
     dump: true # whether dump CSE results
