--- a/options.yml
+++ b/options.yml
@@ -10,6 +10,7 @@ planFile: null
 onlyGenPlan: false
 analyses:
   common-subexp-eliminate: ""
-  process-result: "common-subexp-eliminate"
+  const-prop: ""
+  process-result: ""
 keepResult:
   - $KEEP-ALL
