--- a/options.yml
+++ b/options.yml
@@ -1,6 +1,6 @@
 optionsFile: null
 printHelp: false
-inputFile: src/test/resources/toyc/cse/test1.tc
+inputFile: src/test/resources/toyc/oj/05_function_call.tc
 worldBuilderClass: toyc.frontend.ToyCWorldBuilder
 outputDir: output
 preBuildIR: false
@@ -9,8 +9,7 @@ scope: REACHABLE
 planFile: null
 onlyGenPlan: false
 analyses:
-  common-subexp-eliminate: ""
-  const-prop: ""
+  inter-const-prop: ""
   process-result: ""
 keepResult:
   - $KEEP-ALL
