--- a/options.yml
+++ b/options.yml
@@ -11,6 +11,7 @@ onlyGenPlan: false
 analyses:
   const-fold: ""
   inter-const-prop: ""
+  dead-code: ""
   process-result: ""
 keepResult:
   - $KEEP-ALL
