--- a/src/main/resources/toyc-algorithms.yml
+++ b/src/main/resources/toyc-algorithms.yml
@@ -104,7 +104,7 @@
   id: process-result
   modification: false
   options:
-    analyses: [ dead-code ]
+    analyses: [ inter-const-prop ]
     action: dump # | compare
     file: null
     log-mismatches: false
