--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ test {
     useJUnitPlatform()
     testLogging {
         events "passed", "skipped", "failed"
+        exceptionFormat = 'full'
     }
 }
 
